Fixed reference to 1.1 schema

--- a/opds-1.1.html
+++ b/opds-1.1.html
@@ -1134,6 +1134,6 @@ undefinedAttribute =
   )</pre>
   </div>
 
-  <p>This schema is also maintained in version control: <a href="http://openpub.googlecode.com/svn/trunk/schemas/opds_catalog.rnc">http://openpub.googlecode.com/svn/trunk/schemas/opds_catalog.rnc</a></p>
+  <p>This schema is also maintained in version control: <a href="https://github.com/opds-community/specs/blob/master/schema/1.1/opds.rnc">https://github.com/opds-community/specs/blob/master/schema/1.1/opds.rnc</a></p>
 </div>
 </div>
