OPDS 1.2 is now the latest stable spec

--- a/opds-1.1.html
+++ b/opds-1.1.html
@@ -6,15 +6,15 @@
     <dl>
       <dt>This version</dt>
       <dd>
-        <a href="http://opds-spec.org/specs/opds-catalog-1-1-20110627">http://opds-spec.org/specs/opds-catalog-1-1-20110627</a>
+        <a href="https://specs.opds.io/opds-1.1.html">https://specs.opds.io/opds-1.1.html</a>
       </dd>
       <dt>Latest version</dt>
       <dd>
-        <a href="http://opds-spec.org/specs/opds-catalog-1-1">http://opds-spec.org/specs/opds-catalog-1-1</a>
+        <a href="https://specs.opds.io/opds-1.2">https://specs.opds.io/opds-1.2</a>
       </dd>
       <dt>Previous version</dt>
       <dd>
-        <a href="http://opds-spec.org/specs/opds-catalog-0-9">http://opds-spec.org/specs/opds-catalog-1-0</a>
+        <a href="https://specs.opds.io/opds-1.0.html">https://specs.opds.io/opds-1.0</a>
       </dd>
     </dl>
   </div>
