--- a/opds-0.9.html
+++ b/opds-0.9.html
@@ -6,15 +6,11 @@
     <dl>
       <dt>This version</dt>
       <dd>
-        <a href="http://opds-spec.org/specs/opds-catalog-0-9-20100525">http://opds-spec.org/specs/opds-catalog-0-9-20100525</a>
+        <a href="https://specs.opds.io/opds-0.9.html">https://specs.opds.io/opds-0.9.html</a>
       </dd>
       <dt>Latest version</dt>
       <dd>
-        <a href="http://opds-spec.org/specs/opds-catalog-1-1">http://opds-spec.org/specs/opds-catalog-1-1</a>
-      </dd>
-      <dt>Previous versions</dt>
-      <dd>
-        <a href="http://code.google.com/p/openpub/wiki/DeprecatedOPDSSpecification">http://code.google.com/p/openpub/wiki/DeprecatedOPDSSpecification</a>
+        <a href="https://specs.opds.io/opds-1.2">https://specs.opds.io/opds-1.2</a>
       </dd>
     </dl>
   </div>
