--- a/opds-1.0.html
+++ b/opds-1.0.html
@@ -6,15 +6,15 @@
     <dl>
       <dt>This version</dt>
       <dd>
-        <a href="http://opds-spec.org/specs/opds-catalog-1-0-20100830">http://opds-spec.org/specs/opds-catalog-1-0-20100830</a>
+        <a href="https://specs.opds.io/opds-1.0.html">https://specs.opds.io/opds-1.0.html</a>
       </dd>
       <dt>Latest version</dt>
       <dd>
-        <a href="http://opds-spec.org/specs/opds-catalog-1-1">http://opds-spec.org/specs/opds-catalog-1-1</a>
+        <a href="https://specs.opds.io/opds-1.2">https://specs.opds.io/opds-1.2</a>
       </dd>
       <dt>Previous version</dt>
       <dd>
-        <a href="http://opds-spec.org/specs/opds-catalog-0-9">http://opds-spec.org/specs/opds-catalog-0-9</a>
+        <a href="https://specs.opds.io/opds-0.9.html">https://specs.opds.io/opds-0.9.html</a>
       </dd>
     </dl>
   </div>
